# MyNote

./: CMakeLists.txt
src/: MyNote.aps  main.cpp  mainwidget.cpp  mainwidget.h  textedit.cpp  textedit.h
